src/css/login.scss
.login label {
	cursor: text;
}

.login section.page,
.login aside {
	background: #fff;
}

@media (max-width: 720px) {
	.login .container {
		margin: 10% auto 0px auto !important;
		align-items: center;
	}

	.login section.page,
	.login aside {
		border: none !important;
		box-shadow: none !important;
	}
}

.login .container {
	display: flex;
	justify-content: center;
	margin: 15px auto 0px auto;
	// width: 640px;
	position: relative;
}

.login section.page,
.login aside {
	border-radius: 4px;
	border: #e4e4e4 1px solid;
	box-shadow: 1px 3px 10px #dcdcdc;
}

.login section.page {
	// width: 600px;
	margin: 0 auto;
	top: 0;
	right: 0;
	z-index: 100;
	padding: 30px 10px;
}

.login .container.widget section.page {
	min-height: 400px;
	border-left: 0;
	border-right: 0;
	border-bottom: 0;
}

.login .container.widget .attempts.page {
	min-height: 280px;
}

.login .container.widget div.detail .unavailable-text {
	margin-top: 40px;
	margin-bottom: 5px;
}

.login .container.widget div.detail .unavailable-subtext {
	margin-bottom: 40px;
	font-size: 0.8em;
	font-weight: 600;
}

.login .container.widget.preview section.page {
	border-top: 4px #b944cc solid;
	margin-top: 55px;
}

.login .container.widget.preview section.page:before {
	content: 'Previewing';
	background: #b944cc;

	position: absolute;
	left: 0;
	top: -40px;
	width: 160px;
	height: 20px;
	padding: 8px 0 12px 0;

	font-family: 'Lato', 'Arial', sans-serif;
	font-size: 20px;
	font-weight: 900;
	color: #ffffff;
	text-align: center;
	vertical-align: middle;

	border-radius: 5px 5px 0 0;
}

.login .availability_message {
	padding: 1em 70px;
}

.login div.detail,
div.detail {
	text-align: center;
	clear: both;
}

div.detail.icon-offset {
	margin-left: 110px;
}

.login .container.widget div.detail h3,
.login .container.widget div.detail h3 {
	margin-top: 3px;
}

.login .form-content ul {
	margin: 0;
	position: relative;
	width: 500px;
	margin: 0 auto;
	margin-top: 30px;
	padding: 0;
}

.login .form-content ul li {
	position: relative;
	list-style-type: none;
	display: block;
	height: 46px;
	width: 350px;
	margin: 0 auto;
	margin-top: 13px;
}

.login .form-content ul li.submit_button {
	text-align: center;
}

.login .form-content ul li label,
.login .form-content ul li input[type='text'],
.login .form-content ul li input[type='password'] {
	position: absolute;
	top: 0;
	left: 0;
	display: block;
	width: 300px;
	font-size: 14px;
	font-family: 'Lato';
	font-weight: 200;
}

.login .form-content ul li label {
	z-index: 1000;
	height: 27px;
	margin-top: 13px;
	margin-left: 14px;
}
.login .form-content ul li input[type='text'],
.login .form-content ul li input[type='password'] {
	z-index: 500;
	height: 40px;
	padding-left: 12px;
	padding-right: 12px;
	width: 326px;
	border: solid 1.5px #abadb3;
	background: #fff;
}

.login ul.help_links {
	font-size: 14px;
	text-align: center;
	padding: 0;
}

.login ul.help_links li {
	display: inline;
}

.login ul.help_links li a {
	margin: 0 5px 0 5px;
}

.login ul.help_links li:after {
	content: '|';
}

.login ul.help_links li:last-child:after {
	content: '';
}

.login .error {
	margin: -5px 0 -10px 0;
}

.login .error p {
	background: #ffcfcf;
	color: red;
	font-family: 'Lato';
	font-weight: 600;
	font-size: 17px;
	padding: 6px 10px;
	text-align: center;
	width: 340px;
	margin: 25px auto 0;
}

.login .additional_info {
	padding-bottom: 20px;
	padding-left: 20px;
	padding-right: 20px;
}

.login .widget_info {
	padding-left: 70px;
	padding-right: 15px;
	margin: 0;
	list-style: none;
	/*min-height: 155px;*/
	margin-bottom: 20px;
}
.login .widget_info li {
	list-style-type: none;
	margin-right: 10px;
	display: block;
}

.login .widget_icon {
	position: absolute;
	top: 25px;
	left: -25px;
	background: #0093e7;
	width: 115px;
	height: inherit;
	padding: 15px;
	text-align: right;
	color: #fff;
	font-size: 10px;
	line-height: 13px;
	box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.4);
}

.login .widget_icon img {
	padding-bottom: 5px;
	padding-left: 10px;
	width: 100px;
	height: 100px;
}

.login .widget_info li.widget_tag {
	background: #f2f0d0;
	color: #48483e;
	border-radius: 3px;
	text-transform: uppercase;
	padding: 2px 6px;
	font-size: 12px;
	display: inline-block;
	vertical-align: top;
	margin-right: 3px;
}

.login .widget_info li.widget_availability {
	font-size: 13px;
	display: inline-block;
	padding: 0;
	width: 335px;
	padding-bottom: 15px;
}

.login .widget_info li.widget_availability .available_date,
.login .widget_info li.widget_availability .available_time {
	font-weight: 100;
}

.login .widget_info li.widget_name {
	font-family: 'Lato', arial, serif;
	font-weight: 700;
	font-size: 38px;
	border-bottom: dotted black 1px;
	margin: 0;
	padding: 0 0 5px 0;
	margin-bottom: 10px;
	line-height: 37px;
}

.login .widget_type {
	font-size: 12px;
	text-transform: uppercase;
	color: #b2b2b2;
	display: block;
}

.login .server_date {
	display: none;
}

